tests/invalid/getopt_io_old.err_exp
getopt_io_old.m:022: In clause for predicate `main'/2:
getopt_io_old.m:022:   error: [38;5;203mwrong number of arguments[39;49m ([38;5;203m6[39;49m; should be [38;5;40m4[39;49m or [38;5;40m5[39;49m)
getopt_io_old.m:022:   in call to predicate [38;5;87m`process_options'.[39;49m
getopt_io_old.m:022:   One possible reason for the error is that the predicate
getopt_io_old.m:022:   in the `getopt_io' module that used to be named
getopt_io_old.m:022:   `process_options' [38;5;226mhas been renamed to[39;49m
getopt_io_old.m:022:   [38;5;226m`process_options_io'.[39;49m
